fix(ui): made /api responsive on mobile

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -235,8 +235,17 @@ hr {
 
 /* Styles for @stoplight/elements */
 
+.main-wrapper {
+  overflow-x: auto;
+}
+
 .sl-elements {
   font-size: 14px !important;
+  min-width: 1400px !important;
+}
+
+.sl-elements a {
+  color: inherit !important;
 }
 
 .sl-overflow-x-hidden.sl-overflow-y-auto.sl-flex-1.sl-w-full.sl-px-24.sl-bg-canvas {
